<resources>
    <string name="app_name">COVIDH1</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_state">Check State</string>
    <string name="set_infected">Set Infected</string>
    <string name="set_recovred">Set Recovred</string>
    <string name="user_nid">User NID</string>
    <string name="title_activity_a3">A3</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="modify">Modify</string>
    <string name="infected">Infected</string>
    <string name="recovered">Recovered</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">logout</string>
</resources>
